syntax = "proto3";

package timada;

import "google/protobuf/struct.proto";

service Pikav {
    rpc Publish(PublishRequest) returns (PublishReply) {}
    rpc Subscribe(SubscribeRequest) returns (SubscribeReply) {}
    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeReply) {}
}

message Event {
    string user_id = 1;
    string topic = 2;
    string name = 3;
    google.protobuf.Struct data = 4;
    google.protobuf.Struct metadata = 5;
}

message PublishRequest {
    string namespace = 1;
    repeated Event events = 2;
    bool propagate = 3;
}

message PublishReply {
    bool success = 1;
}

message SubscribeRequest {
    string namespace = 1;
    string filter = 2;
    string user_id = 3;
    string client_id = 4;
}

message SubscribeReply {
    bool success = 1;
}

message UnsubscribeRequest {
    string namespace = 1;
    string filter = 2;
    string user_id = 3;
    string client_id = 4;
}

message UnsubscribeReply {
    bool success = 1;
}
